# tr-autonomy-2-PhillipS72

./: README.md
src/solution/: CMakeLists.txt  image_angle_controller.cpp  package.xml
src/spinnyrobot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/spinnyrobot/install/spinnyrobot/share/spinnyrobot/: package.sh  package.xml
src/spinnyrobot/log/: latest_build
